# c64stream

./: .clang-format  .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  LOCAL-DEVELOPMENT.md  README.md  build-docker.sh  buildspec.json  install-ubuntu-deps.sh  local-act.sh  local-build.bat  local-build.sh
.github/: act-platforms.json  build-instructions.md  copilot-instructions.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu  package-macos  package-ubuntu
.github/workflows/: build-project.yaml  copilot-setup-steps.yml  push.yaml
build-aux/: .run-format.zsh  install-plugin-windows.ps1  run-clang-format  test-windows-atomics.sh  test-windows-build-final.sh  test-windows-build-full.sh  test-windows-build-real.sh  test-windows-ci-errors.sh  test-windows-ci.sh  test-windows-compatibility.sh  test-windows-final.sh  verify-windows-build.sh
cmake/windows/: compilerconfig.cmake
data/: presets.ini
data/effects/: crt_effect.effect
data/locale/: de-DE.ini  en-US.ini  en.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  ru-RU.ini  sv-SE.ini  zh-CN.ini
doc/: atomic-compatibility-windows.md  c64-stream-spec.md  cross-platform-development.md  developer.md  performance-analysis-optimization-roadmap.md  performance-optimization.md  retry-optimization.md  vscode-cross-platform-setup.md  windows-local-build.md  windows-udp-optimization.md
docs/: 404.html  README.md  _config.yml  index.html  manifest.json
docs/recordings/session_19700101_024625/: network.csv  obs.csv
src/: c64-audio.c  c64-audio.h  c64-color.c  c64-color.h  c64-file.c  c64-file.h  c64-logging.h  c64-logo.c  c64-logo.h  c64-network-buffer.c  c64-network-buffer.h  c64-network.c  c64-network.h  c64-presets.c  c64-presets.h  c64-properties.c  c64-properties.h  c64-protocol.c  c64-protocol.h  c64-record-audio.c  c64-record-audio.h  c64-record-frames.c  c64-record-frames.h  c64-record-network.c  c64-record-network.h  c64-record-obs.c  c64-record-obs.h  c64-record-video.c  c64-record-video.h  c64-record.c  c64-record.h  c64-source.c  c64-source.h  c64-types.h  c64-version.c  c64-version.h  c64-video.c  c64-video.h  c64u-atomic.h  c64u-audio.c  (+23 more)
tests/: CMakeLists.txt  c64_mock_server.c  c64u_mock_server.c  test_enhanced_dns  test_enhanced_dns.c  test_hostname_resolution  test_hostname_resolution.c  test_integration.c  test_vic_colors.c
tools/: install-latest-ubuntu-plugin.sh  switch-plugin-version.sh  vic_preview.py  vic_preview_live.py
tools/c64/: README.md  av-sync.asm  c64-build.sh  digit-cycle.asm  install-vice.sh
tools/c64/av-sync/: build-and-run.sh  build.sh
tools/c64/digit-cycle/: README.md  build-and-run.sh  build.sh  debug-simple.sh  debug.sh  digit-cycle.lst  digit-cycle.prg
